# dagster-pipes-gcp

./: .gitignore  .justfile  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: .env  .env.example  Dockerfile  devcontainer.json
.github/workflows/: pipeline-nprod.yaml  pipeline-pr.yaml  pipeline-prod.yaml  pipeline-setup.yaml
.github/workflows/scripts/: create_bucket.sh  enable_services.sh
.github/workflows/templates/checks/: action.yaml
.github/workflows/templates/deploy/: action.yaml
blog/: 🔩 How to use Dagster to orchestrate google cloud functions (or any other external execution environment).md
cloud_function/: fn_pipes.py  fn_utils.py  main.py  pipes_utils.py  test_pipes.py
dagster/: DAG.py  dg_pipes.py  pipes.py  test_pipes.py  utils.py
dagster/tmph9i709u5/history/: runs.db
dagster/tmph9i709u5/history/runs/: 2003367a-6aa4-430d-b621-13ee1dd0f1a7.db  index.db
dagster/tmph9i709u5/schedules/: schedules.db
dagster/tmph9i709u5/storage/2003367a-6aa4-430d-b621-13ee1dd0f1a7/compute_logs/: dmmasupf.err
src/: main.py  pipes_utils.py  utils.py
